--- a/src/components/auth/buttons/AuthButton.module.css
+++ b/src/components/auth/buttons/AuthButton.module.css
@@ -1,4 +1,4 @@
-.login_button {
+.auth_btn {
   width: 300px;
   height: 40px;
   background-color: #0078ff;
@@ -9,7 +9,11 @@
   font-size: 1.2rem;
 }
 
-.login_button:hover {
+.auth_btn:hover {
   cursor: pointer;
   background-color: #0053F4;
+}
+
+.margin_btn {
+  margin-bottom: 1rem;
 }
