--- a/src/components/auth/buttons/SmallLoginButton.module.css
+++ b/src/components/auth/buttons/SmallLoginButton.module.css
@@ -1,4 +1,4 @@
-.login_button {
+.login_btn {
   width: 70px;
   height: 30px;
   background-color: #fee500;
@@ -8,6 +8,6 @@
   border: none;
 }
 
-.login_button:hover {
+.login_btn:hover {
   cursor: pointer;
 }
